chore: stabilize ci and release workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
         run: go test -v ./...
 
       - name: Run GoReleaser
+        if: ${{ secrets.HOMEBREW_TAP_TOKEN != '' }}
         uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
@@ -43,6 +44,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+
+      - name: Run GoReleaser (skip Homebrew tap update)
+        if: ${{ secrets.HOMEBREW_TAP_TOKEN == '' }}
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          version: latest
+          args: release --clean --skip=brews
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload assets
         uses: actions/upload-artifact@v4
