--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,6 +19,7 @@ linters:
     - staticcheck
     - typecheck
     - unused
+    - shadow
 
   disable:
     - errcheck
@@ -29,8 +30,6 @@ linters:
     - unparam
 
 linters-settings:
-  govet:
-    check-shadowing: true
   gocyclo:
     min-complexity: 15
   gocognit:
