--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
           path: dist/
 
   release:
-    if: ${{ github.ref_type == 'tag' }}
+    if: github.ref_type == 'tag'
     runs-on: ubuntu-latest
     needs: [build]
     steps:
