fix: allow release workflow to check tap token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,17 +39,17 @@ jobs:
         run: go test -v ./...
 
       - name: Run GoReleaser
-        if: ${{ secrets.HOMEBREW_TAP_TOKEN != '' }}
+        if: ${{ env.HOMEBREW_TAP_TOKEN != '' }}
         uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+          HOMEBREW_TAP_TOKEN: ${{ env.HOMEBREW_TAP_TOKEN }}
 
       - name: Run GoReleaser (skip Homebrew tap update)
-        if: ${{ secrets.HOMEBREW_TAP_TOKEN == '' }}
+        if: ${{ env.HOMEBREW_TAP_TOKEN == '' }}
         uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
